<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.authentication.profile.ProfileFragment">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/profile"
            android:textSize="22sp"
            android:theme="@style/TEXT_TITLE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/profile_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            app:srcCompat="@drawable/baseline_account_circle_24"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/name"
            android:theme="@style/TEXT_TITLE"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/location"
            android:theme="@style/TEXT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_editProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:width="320dp"
            android:height="60dp"
            android:drawableStart="@drawable/baseline_mode_edit_outline_24"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/edit_profile"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_mode_edit_outline_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="320dp"
            android:height="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/change_password"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_lock_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_editProfile"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_bookmarkArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="320dp"
            android:height="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/bookmark_article"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_bookmark_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_changePassword"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_myArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="320dp"
            android:height="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/my_article"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_menu_post_add_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_bookmarkArticle"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="320dp"
            android:height="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/settings"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_settings_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_myArticle"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="320dp"
            android:height="60dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/logout"
            android:textAlignment="textStart"
            app:cornerRadius="10dp"
            app:icon="@drawable/baseline_logout_24"
            app:iconPadding="24dp"
            android:theme="@style/BUTTON"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_logout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>